fixing spacing on mobile

--- a/wp-content/themes/hoverboard/src/scss/partials/_pages.scss
+++ b/wp-content/themes/hoverboard/src/scss/partials/_pages.scss
@@ -93,7 +93,10 @@
   margin: 0;
   li {
     background: darken($grey--light, 20%);
-    margin-bottom: $base--spacing;
+    margin-bottom: $base--spacing/2;
+    @include breakpoint($base-spacing-change-breakpoint) {
+      margin-bottom: $base--spacing;
+    }
     padding: $base--spacing;
     color: $white;
     a {
